style.css
@import url(https://fonts.googleapis.com/css?family=Open+Sans|Raleway);
body {
  font-family: 'Open Sans', sans-serif;
  display: flex;
  min-height: 100vh;
  flex-direction: column;
  min-width: 354px;
}
nav {
  background: #C70039;
  color: white;
  display: flex;
  flex-direction: column;
}
nav > div {
  display: flex;
  align-items: center;
  flex-wrap: wrap;
}
nav h1,
nav p {
  font-family: 'Raleway', sans-serif;
}
nav h1 {
  padding-left: 24px;
  margin: 0;
}
nav a {
  color: white;
  flex-shrink: 0;
}
nav a:hover {
  text-decoration: none;
  color: inherit;
}
nav a:focus {
  color: inherit;
}
nav p {
  margin: 0;
  font-size: 20px;
  flex-grow: 1;
  padding: 0 24px;
}
#search {
  border: none;
  width: 80%;
  margin: 8px auto;
  border-radius: 2px;
}
nav ul {
  list-style: none;
  flex-shrink: 0;
  margin: 0;
  padding: 0;
}
nav li {
  display: inline-block;
}
nav li a {
  padding: 16px;
  display: block;
}
nav li a:hover {
  background: #C78E00;
}
nav li:last-child {
  padding-right: 16px;
}
@media (max-width: 820px) {
  nav {
    text-align: center;
  }
  nav li:last-child {
    padding-right: 0;
  }
}
@media (max-width: 1189px) {
  nav > div {
    margin-top: 8px;
  }
  nav h1,
  nav ul {
    margin: 0 auto;
  }
}
body > div.container {
  flex: 1;
}
.keyword {
  display: inline-block;
  margin: 8px;
}
.badge {
  margin-left: 4px;
}
.keyword:hover {
  text-decoration: underline;
  cursor: pointer;
}
#results {
  margin-top: 40px;
  margin-bottom: 100px;
}
.entry {
  padding: 20px 10px;
  border-bottom: 1px solid #E0E0E0;
}
.entry:last-child {
  border-bottom: none;
}
.entry .left-column {
  display: table-cell;
  width: 100%;
}
.entry .right-column {
  display: table-cell;
  text-align: right;
  vertical-align: middle;
}
.entry h3 {
  margin-top: 10px;
  margin-bottom: 10px;
}
.entry a.btn {
  margin: 4px;
}
.entry-keyword {
  color: #757575;
  padding: 4px 8px;
}
.entry-keyword > .glyphicon {
  margin-right: 4px;
}
footer {
  background: #C78E00;
  color: white;
  padding: 16px;
}
footer h1 {
  font-size: 20px;
  padding-left: 16px;
}
footer a {
  color: #581845;
}
#footerFlex {
  display: flex;
  flex-wrap: wrap;
}
#footerFlex > section {
  width: 50%;
  padding: 16px;
}

